# Famine

./: .gitignore  Cargo.toml  build.ps1  build.rs  notes.txt
famine/: Cargo.toml  lib.rs
famine-desktop/: Cargo.toml  build.rs
famine-desktop/core/: CMakeLists.txt  window.cpp
famine-desktop/core/include/: mesh.h  window.h
famine-desktop/src/: main.rs
famine-web/: Cargo.toml  index.css  index.html  index.js  server.py
famine-web/src/: lib.rs
famine/src/: lib.rs  linalg.rs  numerical.rs
famine/src/shaders/: font_shader.rs  mod.rs
famine_rust/: Cargo.toml
famine_rust/src/: lib.rs
libfamine/: lib.rs
libfaminecore-desktop/: CMakeLists.txt  window.cpp
libfaminecore-desktop/include/: window.h
src/: app.rs  main.rs  window.cpp  window.h  windowimpl.h
