[package]
name = "famine-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
famine_application = { path = "../" }
famine = { path = "../famine" }

[dependencies.web-sys]
version = "0.3.69"
features = [
  'console',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'WebGl2RenderingContext',
  'Window',
]